--- a/poketype.cabal
+++ b/poketype.cabal
@@ -34,6 +34,7 @@ library
   build-depends:
       base >=4.7 && <5
     , optparse-applicative
+    , split
   default-language: Haskell2010
 
 executable poketype-exe
@@ -47,6 +48,7 @@ executable poketype-exe
       base >=4.7 && <5
     , optparse-applicative
     , poketype
+    , split
   default-language: Haskell2010
 
 test-suite poketype-test
@@ -61,4 +63,5 @@ test-suite poketype-test
       base >=4.7 && <5
     , optparse-applicative
     , poketype
+    , split
   default-language: Haskell2010
